Added Management Features & Fixed Mobile Viewing

--- a/public/game.html
+++ b/public/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Join Pickleball Game</title>
     <style>
         body {
@@ -38,6 +38,7 @@
             box-sizing: border-box;
             border: 1px solid #ddd;
             border-radius: 4px;
+            font-size: 16px; /* Add this line */
         }
         button {
             background-color: #4CAF50;
