--- a/public/privacy.html
+++ b/public/privacy.html
@@ -96,6 +96,7 @@
         }
     </style>
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
     <div class="container">
@@ -272,5 +273,6 @@
     </div>
 
     <script src="/js/footer.js"></script>
+    <script src="/js/header.js"></script>
 </body>
 </html>
