--- a/public/terms.html
+++ b/public/terms.html
@@ -106,6 +106,7 @@
         }
     </style>
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
     <div class="container">
@@ -324,5 +325,6 @@
     </div>
 
     <script src="/js/footer.js"></script>
+    <script src="/js/header.js"></script>
 </body>
 </html>
