--- a/public/index.html
+++ b/public/index.html
@@ -423,7 +423,7 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="players">👥 Number of Players:</label>
+                    <label for="players">👥 Open Spots:</label>
                     <input type="number" id="players" name="players" value="4" min="1" max="50" required>
                     <small style="color: #666; font-size: 12px; margin-top: 5px; display: block;">Enter any number from 1 to 50 players</small>
                 </div>
