final changes for this edition
tset

--- a/public/index.html
+++ b/public/index.html
@@ -134,15 +134,15 @@
         input[type="time"] {
             min-height: 44px;
             line-height: 1.5;
-            text-align: center;
+            text-align: left;
             font-family: inherit;
         }
 
         input[type="time"]::-webkit-datetime-edit {
             width: 100%;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: left;
+            align-items: left;
         }
         
         input:focus, select:focus, textarea:focus {
@@ -415,7 +415,7 @@
                     <label for="organizerPhone">📱 Your Phone Number:</label>
                     <input type="tel" id="organizerPhone" name="organizerPhone" placeholder="(555) 123-4567" required>
                     <div class="sms-info">
-                        📱 You'll receive a confirmation text. Reply "1" to get your management link!
+                        By entering your number, you agree to receive a confirmation text where you can manage your game. Msg & data rates may apply. See Terms & Privacy.
                     </div>
                 </div>
 
