Button Links Updated

--- a/public/manage.html
+++ b/public/manage.html
@@ -90,25 +90,13 @@
     </form>
 </div>
                 
-                <div class="share-section">
-                    <h3 class="subsection-title">🔗 Share Game Links</h3>
-                    <div class="link-group">
-                        <h4>📤 Share with Players</h4>
-                        <p style="font-size: 12px; color: #888; font-style: italic; margin: 5px 0 15px 0;">Copy this complete message and send it to your players (text, email, social media) - this copies a complete invitation message with all game details and the registration link.</p>
-                        <div class="link-container">
-                            <input type="text" id="playerLink" readonly>
-                            <button id="copyPlayerLink" class="copy-btn">Copy Message</button>
-                        </div>
-                    </div>
-                    <div class="link-group">
-                        <h4>⚙️ Host Management Link (Keep private):</h4>
-                        <p style="font-size: 12px; color: #888; font-style: italic; margin: 5px 0 15px 0;">Use this link to manage your game from any device - edit details, manage players, send announcements, or cancel the game.</p>
-                        <div class="link-container">
-                            <input type="text" id="hostLink" readonly>
-                            <button id="copyHostLink" class="copy-btn">📋 Copy</button>
-                        </div>
-                    </div>
-                </div>
+<div class="share-section">
+    <div class="center-copy-section">
+        <p>Click the button below to copy a complete invitation message with all game details and registration link:</p>
+        <button id="copyPlayerLink" class="copy-btn">Copy Invitation Message</button>
+        <p class="copy-description">This copies a complete invitation message that you can send via text, email, or social media. It includes all game details and the registration link.</p>
+    </div>
+</div>
             </div>
             
             <!-- Players Tab -->
