--- a/public/index.html
+++ b/public/index.html
@@ -1122,8 +1122,7 @@ function copyToClipboard() {
 📅 Date: ${currentGameData.formattedDate}
 ⏰ Time: ${currentGameData.formattedTime}
 ⏱️ Duration: ${currentGameData.duration} minutes
-👥 Spots: ${currentGameData.totalPlayers} spots${currentGameData.message ? '\n💬 ' + currentGameData.message : ''}
-
+👥 ${currentGameData.totalPlayers === '1' ? 'Spot' : 'Spots'}: ${currentGameData.totalPlayers} ${currentGameData.totalPlayers === '1' ? 'spot' : 'spots'}
 Click this link to sign up:
 ${gameLink}
 
