--- a/public/index.html
+++ b/public/index.html
@@ -1115,6 +1115,11 @@ function copyToClipboard() {
         locationText += ` - ${currentGameData.courtNumber}`;
     }
     
+    // FIXED: Handle singular/plural spots
+    const totalPlayers = parseInt(currentGameData.totalPlayers);
+    const spotsText = totalPlayers === 1 ? 'Spot' : 'Spots';
+    const spotsWord = totalPlayers === 1 ? 'spot' : 'spots';
+    
     // Create a complete message with the link and instructions
     const message = `🏓 Join our pickleball game!
 
@@ -1122,7 +1127,8 @@ function copyToClipboard() {
 📅 Date: ${currentGameData.formattedDate}
 ⏰ Time: ${currentGameData.formattedTime}
 ⏱️ Duration: ${currentGameData.duration} minutes
-👥 ${currentGameData.totalPlayers === '1' ? 'Spot' : 'Spots'}: ${currentGameData.totalPlayers} ${currentGameData.totalPlayers === '1' ? 'spot' : 'spots'}
+👥 ${spotsText}: ${totalPlayers} ${spotsWord}${currentGameData.message ? '\n💬 ' + currentGameData.message : ''}
+
 Click this link to sign up:
 ${gameLink}
 
