--- a/public/game.html
+++ b/public/game.html
@@ -633,6 +633,22 @@
                 font-size: 14px;
             }
         }
+
+        /* Extra small mobile devices */
+        @media (max-width: 480px) {
+            body {
+                padding: 0;
+            }
+
+            .container {
+                border-radius: 0;
+                box-shadow: none;
+            }
+
+            .section-header {
+                border-radius: 0;
+            }
+        }
     </style>
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
