--- a/public/index.html
+++ b/public/index.html
@@ -753,6 +753,22 @@
                 padding: 14px 16px;
             }
 
+            /* Extra small mobile devices */
+@media (max-width: 480px) {
+    body {
+        padding: 0;
+    }
+
+    .container {
+        border-radius: 0;
+        box-shadow: none;
+    }
+
+    .page-header {
+        border-radius: 0;
+    }
+}
+
             /* ADD this CSS to your existing <style> section for better spacing */
         }
     </style>
