--- a/public/my-games.html
+++ b/public/my-games.html
@@ -447,7 +447,7 @@
 
         @media (max-width: 768px) {
             body {
-                padding: 10px;
+                padding: 0px;
                 margin: 0;
             }
 
@@ -516,6 +516,22 @@
             .footer-note {
                 padding: 15px 20px;
             }
+
+            /* Extra small mobile devices */
+@media (max-width: 480px) {
+    body {
+        padding: 0;
+    }
+
+    .container {
+        border-radius: 0;
+        box-shadow: none;
+    }
+
+    .page-header {
+        border-radius: 0;
+    }
+}
         }
     </style>
     <link rel="stylesheet" href="/css/header.css">
