--- a/public/game.html
+++ b/public/game.html
@@ -96,7 +96,7 @@
 
         /* Sleeker, smaller header with navy-to-green gradient */
         .section-header {
-            background: linear-gradient(135deg, #1e3a8a 0%, #429046 100%);
+            background: linear-gradient(135deg, #475569 0%, #429046 100%);
             color: white;
             padding: 20px 32px 16px;
             margin: 0;
