--- a/public/my-games.html
+++ b/public/my-games.html
@@ -99,7 +99,7 @@
 
         /* Sleeker, smaller header with navy-to-green gradient */
         .page-header {
-            background: linear-gradient(135deg, #1e3a8a 0%, #429046 100%);
+            background: linear-gradient(135deg, #475569 0%, #429046 100%);
             color: white;
             padding: 20px 32px 16px;
             margin: 0;
@@ -317,7 +317,7 @@
         }
 
         .btn-view {
-            background: linear-gradient(135deg, #1e3a8a 0%, #1e40af 100%);
+            background: linear-gradient(135deg, #475569 0%, #1e40af 100%);
             color: white;
             box-shadow: 0 4px 16px rgba(30, 58, 138, 0.3);
         }
