--- a/public/manage.html
+++ b/public/manage.html
@@ -332,6 +332,7 @@
     </div>
 
     <!-- Load our separated JavaScript files -->
+     <script src="/js/invitation-generator.js"></script>
     <script src="/js/footer.js"></script>
     <script src="/js/header.js"></script>
     <script src="/js/manage-scripts.js"></script>
