--- a/public/manage.html
+++ b/public/manage.html
@@ -194,6 +194,16 @@
                                 <!-- Waitlist will be populated here -->
                             </div>
                         </div>
+
+                        <div class="player-section out-players">
+    <h3 class="subsection-title">❌ Players Who Are Out</h3>
+    <div class="player-count out-count">
+        <span id="outCount">0</span> players can't make it
+    </div>
+    <div id="outPlayers" class="player-list">
+        <!-- Out players will be populated here -->
+    </div>
+</div>
                     </div>
                     
                     <!-- Collapsible Add Player Section -->
