Game details section

--- a/public/game.html
+++ b/public/game.html
@@ -807,7 +807,9 @@
             </form>
             
             <div class="form-help-text">
-                💡 <strong>Need to cancel later?</strong> Just reply "9" to any text message you receive about this game.
+                💡 <strong>Need to cancel later?</strong> Just reply "9" to any text message you receive about this game.<br><br>
+                🤝 <strong>Can't make it?</strong> Please still select the "OUT" option so we don't send reminder texts if we're short on players as game time approaches.
+
             </div>
         </div>
 
