--- a/public/index.html
+++ b/public/index.html
@@ -1735,7 +1735,7 @@
     <div class="container">
         <div class="page-header">
             <div class="header-content">
-                <h1>🏓 Complete IN or OUT Guide</h1>
+                <h1>IN or OUT Guide</h1>
                 <div class="subtitle">Everything you need to know to organize amazing pickleball games</div>
             </div>
         </div>
