waitlist game update

--- a/public/game.html
+++ b/public/game.html
@@ -950,7 +950,7 @@
     <h4>What's Next?</h4>
     <ul>
         <li>📲 You'll receive a confirmation text message shortly</li>
-        <li>👥 Want to see whose playing? Just reply "2" to any text message before the game</li>
+        <li id="seeWhosPlayingInstruction">👥 Want to see whose playing? Just reply "2" to any text message before the game</li>
         <li>❌ Need to cancel? Just reply "9" to any text message</li>
         <li>📧 Game updates will be sent via text</li>
     </ul>
